--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@
 
 
 /* responsive starts here */
-@media (max-width: 768px) { 
+/* @media (max-width: 768px) { 
  
   .dropdown{
     visibility: hidden;
@@ -117,11 +117,11 @@
     width: 80px;
   }
 
+ */
 
 
 
-
- }
+ /* } */
 
 
 
